src/styles/_scrollbar.scss
.dark-bg::-webkit-scrollbar-track {
    border-radius: 10px;
    background-color: #101010;
}

.dark-bg::-webkit-scrollbar {
    width: 10px;
    background-color: #101010;
}

.dark-bg::-webkit-scrollbar-thumb {
    border-radius: 10px;
    background-color: $darkertext;
}

.dark-bg {
    ::-webkit-scrollbar-track {
        border-radius: 10px;
        background-color: #101010;
    }

    ::-webkit-scrollbar {
        width: 10px;
        background-color: #101010;
    }

    ::-webkit-scrollbar-thumb {
        border-radius: 10px;
        background-color: $darkertext;
    }
}

.light-bg::-webkit-scrollbar-track {
    border-radius: 10px;
    background-color: #f5f5f5;
}

.light-bg::-webkit-scrollbar {
    width: 10px;
    background-color: #f5f5f5;
}

.light-bg::-webkit-scrollbar-thumb {
    border-radius: 10px;
    background-color: $middark;
}

.light-bg {
    ::-webkit-scrollbar-track {
        border-radius: 10px;
        background-color: #f5f5f5;
    }

    ::-webkit-scrollbar {
        width: 10px;
        background-color: #f5f5f5;
    }

    ::-webkit-scrollbar-thumb {
        border-radius: 10px;
        background-color: $middark;
    }
}

